added maxLength attribute to input fields

--- a/layouts/scores/single.html
+++ b/layouts/scores/single.html
@@ -72,7 +72,7 @@
                                 <div class="field-body">
                                     <div class="field is-expanded">
                                         <p class="control">
-                                            <input type="text" name="company"
+                                            <input type="text" name="company" maxlength="35"
                                                    placeholder="z.B. Musikverein Leopoldsdorf" class="input">
                                         </p>
                                     </div>
@@ -106,7 +106,7 @@
                                 <div class="field-body">
                                     <div class="field is-expanded">
                                         <p class="control">
-                                            <input type="text" name="street" placeholder="Straße" class="input">
+                                            <input type="text" name="street" placeholder="Straße" class="input" maxlength="30">
                                         </p>
                                     </div>
 
@@ -130,7 +130,7 @@
 
                                     <div class="field is-expanded">
                                         <p class="control">
-                                            <input type="text" name="city" placeholder="Ort" class="input">
+                                            <input type="text" name="city" placeholder="Ort" class="input" maxlength="30">
                                         </p>
                                     </div>
                                 </div>
@@ -170,7 +170,7 @@
                                     <div class="field-body">
                                         <div class="field">
                                             <p class="control">
-                                                <input type="text" name="bStreet" placeholder="Straße" class="input">
+                                                <input type="text" name="bStreet" placeholder="Straße" class="input" maxlength="30">
                                             </p>
                                         </div>
 
@@ -195,7 +195,7 @@
 
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="bCity" placeholder="Ort" class="input">
+                                                <input type="text" name="bCity" placeholder="Ort" class="input" maxlength="30">
                                             </p>
                                         </div>
                                     </div>
