removed addressesEqual and changed b to d prefix in post form

--- a/layouts/scores/single.html
+++ b/layouts/scores/single.html
@@ -153,7 +153,7 @@
                                     <div class="field is-expanded">
                                         <p class="control">
                                             <label class="checkbox">
-                                                <input type="checkbox" name="addressesEqual" class=""
+                                                <input type="checkbox" class=""
                                                        oninput="toggleVisibility('sndAddress')"> Abweichende
                                                 Lieferadresse
                                             </label>
@@ -170,13 +170,13 @@
                                     <div class="field-body">
                                         <div class="field">
                                             <p class="control">
-                                                <input type="text" name="bStreet" placeholder="Straße" class="input" maxlength="30">
+                                                <input type="text" name="dStreet" placeholder="Straße" class="input" maxlength="30">
                                             </p>
                                         </div>
 
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="bStreetNumber" placeholder="Hausnummer"
+                                                <input type="text" name="dStreetNumber" placeholder="Hausnummer"
                                                        class="input">
                                             </p>
                                         </div>
@@ -188,14 +188,14 @@
                                     <div class="field-body">
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="bPostCode" placeholder="Postleitzahl"
+                                                <input type="text" name="dPostCode" placeholder="Postleitzahl"
                                                        class="input">
                                             </p>
                                         </div>
 
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="bCity" placeholder="Ort" class="input" maxlength="30">
+                                                <input type="text" name="dCity" placeholder="Ort" class="input" maxlength="30">
                                             </p>
                                         </div>
                                     </div>
@@ -206,7 +206,7 @@
                                     <div class="field-body">
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="bState" placeholder="Land" class="input">
+                                                <input type="text" name="dState" placeholder="Land" class="input">
                                             </p>
                                         </div>
                                     </div>
