--- a/layouts/scores/single.html
+++ b/layouts/scores/single.html
@@ -153,7 +153,7 @@
                                     <div class="field is-expanded">
                                         <p class="control">
                                             <label class="checkbox">
-                                                <input type="checkbox" class=""
+                                                <input type="checkbox" class="" autocomplete="off"
                                                        oninput="toggleVisibility('sndAddress')"> Abweichende
                                                 Lieferadresse
                                             </label>
@@ -219,7 +219,7 @@
                                     <div class="field is-expanded">
                                         <p class="control">
                                             <label class="checkbox">
-                                                <input type="checkbox" oninput="toggleAgb()" name="" class=""> Ich habe
+                                                <input type="checkbox" oninput="toggleAgb()" name="" class="" autocomplete="off"> Ich habe
                                                 die AGB gelesen und
                                                 bin einverstanden
                                             </label>
