added autocomplete=off to optional delivery address

--- a/layouts/scores/single.html
+++ b/layouts/scores/single.html
@@ -170,14 +170,14 @@
                                     <div class="field-body">
                                         <div class="field">
                                             <p class="control">
-                                                <input type="text" name="dStreet" placeholder="Straße" class="input" maxlength="30">
+                                                <input type="text" name="dStreet" placeholder="Straße" class="input" maxlength="30" autocomplete="off">
                                             </p>
                                         </div>
 
                                         <div class="field is-expanded">
                                             <p class="control">
                                                 <input type="text" name="dStreetNumber" placeholder="Hausnummer"
-                                                       class="input">
+                                                       class="input" autocomplete="off">
                                             </p>
                                         </div>
                                     </div>
@@ -189,13 +189,14 @@
                                         <div class="field is-expanded">
                                             <p class="control">
                                                 <input type="text" name="dPostCode" placeholder="Postleitzahl"
-                                                       class="input">
+                                                       class="input" autocomplete="off">
                                             </p>
                                         </div>
 
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="dCity" placeholder="Ort" class="input" maxlength="30">
+                                                <input type="text" name="dCity" placeholder="Ort" class="input" maxlength="30"
+                                                       autocomplete="off">
                                             </p>
                                         </div>
                                     </div>
@@ -206,7 +207,7 @@
                                     <div class="field-body">
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="dState" placeholder="Land" class="input">
+                                                <input type="text" name="dState" placeholder="Land" class="input" autocomplete="off">
                                             </p>
                                         </div>
                                     </div>
