--- a/layouts/scores/single.html
+++ b/layouts/scores/single.html
@@ -53,13 +53,15 @@
                                 <div class="field-body">
                                     <div class="field is-expanded">
                                         <p class="control">
-                                            <input type="text" name="firstName" placeholder="Vorname" class="input">
+                                            <input type="text" name="firstName" placeholder="Vorname" class="input"
+                                                   required>
                                         </p>
                                     </div>
 
                                     <div class="field is-expanded">
                                         <p class="control">
-                                            <input type="text" name="lastName" placeholder="Nachname" class="input">
+                                            <input type="text" name="lastName" placeholder="Nachname" class="input"
+                                                   required>
                                         </p>
                                     </div>
                                 </div>
@@ -86,14 +88,14 @@
                                 <div class="field-body">
                                     <div class="field is-expanded">
                                         <p class="control">
-                                            <input type="email" name="email" placeholder="Email" class="input">
+                                            <input type="email" name="email" placeholder="Email" class="input" required>
                                         </p>
                                     </div>
 
                                     <div class="field is-expanded">
                                         <p class="control">
                                             <input type="text" name="telephone" placeholder="Telefonnummer"
-                                                   class="input">
+                                                   class="input" required>
                                         </p>
                                     </div>
                                 </div>
@@ -106,14 +108,15 @@
                                 <div class="field-body">
                                     <div class="field is-expanded">
                                         <p class="control">
-                                            <input type="text" name="street" placeholder="Straße" class="input" maxlength="30">
+                                            <input type="text" name="street" placeholder="Straße" class="input"
+                                                   maxlength="30" required>
                                         </p>
                                     </div>
 
                                     <div class="field is-expanded">
                                         <p class="control">
                                             <input type="text" name="streetNumber" placeholder="Hausnummer"
-                                                   class="input">
+                                                   class="input" required>
                                         </p>
                                     </div>
                                 </div>
@@ -124,13 +127,15 @@
                                 <div class="field-body">
                                     <div class="field is-expanded">
                                         <p class="control">
-                                            <input type="text" name="postCode" placeholder="Postleitzahl" class="input">
+                                            <input type="text" name="postCode" placeholder="Postleitzahl" class="input"
+                                                   required>
                                         </p>
                                     </div>
 
                                     <div class="field is-expanded">
                                         <p class="control">
-                                            <input type="text" name="city" placeholder="Ort" class="input" maxlength="30">
+                                            <input type="text" name="city" placeholder="Ort" class="input"
+                                                   maxlength="30" required>
                                         </p>
                                     </div>
                                 </div>
@@ -141,7 +146,7 @@
                                 <div class="field-body">
                                     <div class="field is-expanded">
                                         <p class="control">
-                                            <input type="text" name="state" placeholder="Land" class="input">
+                                            <input type="text" name="state" placeholder="Land" class="input" required>
                                         </p>
                                     </div>
                                 </div>
@@ -170,13 +175,16 @@
                                     <div class="field-body">
                                         <div class="field">
                                             <p class="control">
-                                                <input type="text" name="dStreet" placeholder="Straße" class="input" maxlength="30" autocomplete="off">
+                                                <input type="text" name="dStreet" id="dStreet" placeholder="Straße"
+                                                       class="input" maxlength="30"
+                                                       autocomplete="off">
                                             </p>
                                         </div>
 
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="dStreetNumber" placeholder="Hausnummer"
+                                                <input type="text" name="dStreetNumber" id="dStreetNumber"
+                                                       placeholder="Hausnummer"
                                                        class="input" autocomplete="off">
                                             </p>
                                         </div>
@@ -188,14 +196,16 @@
                                     <div class="field-body">
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="dPostCode" placeholder="Postleitzahl"
+                                                <input type="text" name="dPostCode" id="dPostCode"
+                                                       placeholder="Postleitzahl"
                                                        class="input" autocomplete="off">
                                             </p>
                                         </div>
 
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="dCity" placeholder="Ort" class="input" maxlength="30"
+                                                <input type="text" name="dCity" id="dCity" placeholder="Ort"
+                                                       class="input" maxlength="30"
                                                        autocomplete="off">
                                             </p>
                                         </div>
@@ -207,7 +217,8 @@
                                     <div class="field-body">
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="dState" placeholder="Land" class="input" autocomplete="off">
+                                                <input type="text" name="dState" id="dState" placeholder="Land"
+                                                       class="input" autocomplete="off">
                                             </p>
                                         </div>
                                     </div>
@@ -220,7 +231,9 @@
                                     <div class="field is-expanded">
                                         <p class="control">
                                             <label class="checkbox">
-                                                <input type="checkbox" oninput="toggleAgb()" name="" class="" autocomplete="off"> Ich habe
+                                                <input type="checkbox" oninput="toggleAgb()" name="" class=""
+                                                       autocomplete="off" required>
+                                                Ich habe
                                                 die AGB gelesen und
                                                 bin einverstanden
                                             </label>
@@ -277,12 +290,32 @@
                     function toggleVisibility(el) {
                         let elem = document.getElementById(el);
                         let lbl = document.getElementById('addressLabel');
-                        if (getComputedStyle(elem).display === 'none') {
+                        let dstreet = document.getElementById("dStreet");
+                        let dstreetnum = document.getElementById("dStreetNumber");
+                        let dpost = document.getElementById("dPostCode");
+                        let dcity = document.getElementById("dCity");
+                        let dstate = document.getElementById("dStreet");
+                        if (getComputedStyle(elem).display === 'dState') {
                             elem.style.display = 'unset';
-                            lbl.innerText = 'Rechnungsadresse'
+                            lbl.innerText = 'Rechnungsadresse';
+                            dstreet.required = true;
+                            dstreetnum.required = true;
+                            dpost.required = true;
+                            dcity.required = true;
+                            dstate.required = true;
                         } else {
                             elem.style.display = 'none';
-                            lbl.innerText = 'Rechnungs- und Lieferadresse'
+                            lbl.innerText = 'Rechnungs- und Lieferadresse';
+                            dstreet.required = false;
+                            dstreet.innerText = "";
+                            dstreetnum.required = false;
+                            dstreetnum.innerText = "";
+                            dpost.required = false;
+                            dpost.innerText = "";
+                            dcity.required = false;
+                            dcity.innerText = "";
+                            dstate.required = false;
+                            dstate.innerText = "";
                         }
 
                     }
