changed innerText attribute to value

--- a/layouts/scores/single.html
+++ b/layouts/scores/single.html
@@ -307,15 +307,15 @@
                             elem.style.display = 'none';
                             lbl.innerText = 'Rechnungs- und Lieferadresse';
                             dstreet.required = false;
-                            dstreet.innerText = "";
+                            dstreet.value = "";
                             dstreetnum.required = false;
-                            dstreetnum.innerText = "";
+                            dstreetnum.value = "";
                             dpost.required = false;
-                            dpost.innerText = "";
+                            dpost.value = "";
                             dcity.required = false;
-                            dcity.innerText = "";
+                            dcity.value = "";
                             dstate.required = false;
-                            dstate.innerText = "";
+                            dstate.value = "";
                         }
 
                     }
