added state select

--- a/layouts/scores/single.html
+++ b/layouts/scores/single.html
@@ -146,7 +146,72 @@
                                 <div class="field-body">
                                     <div class="field is-expanded">
                                         <p class="control">
-                                            <input type="text" name="state" placeholder="Land" class="input" required>
+                                            <select id="state" name="state" required autocomplete="off">
+                                                <option value="" disabled selected>Bitte ein Land auswählen</option>
+                                                <option value="Österreich">Österreich</option>
+                                                <option value="Deutschland">Deutschland</option>
+                                                <option value="Schweiz">Schweiz</option>
+                                                <optgroup label="B">
+                                                    <option value="Belgien">Belgien</option>
+                                                    <option value="Bulgarien">Bulgarien</option>
+                                                </optgroup>
+                                                <optgroup label="D">
+                                                    <option value="Dänemark">Dänemark</option>
+                                                </optgroup>
+                                                <optgroup label="E">
+                                                    <option value="Estland">Estland</option>
+                                                </optgroup>
+                                                <optgroup label="F">
+                                                    <option value="Finnland">Finnland</option>
+                                                    <option value="Frankreich">Frankreich</option>
+                                                </optgroup>
+                                                <optgroup label="G">
+                                                    <option value="Griechenland">Griechenland</option>
+                                                    <option value="Großbritannien">Großbritannien</option>
+                                                </optgroup>
+                                                <optgroup label="I">
+                                                    <option value="Irland">Irland</option>
+                                                    <option value="Italien">Italien</option>
+                                                </optgroup>
+                                                <optgroup label="K">
+                                                    <option value="Kroatien">Kroatien</option>
+                                                </optgroup>
+                                                <optgroup label="L">
+                                                    <option value="Lettland">Lettland</option>
+                                                    <option value="Liechtenstein">Liechtenstein</option>
+                                                    <option value="Litauen">Litauen</option>
+                                                    <option value="Luxemburg">Luxemburg</option>
+                                                </optgroup>
+                                                <optgroup label="M">
+                                                    <option value="Malta">Malta</option>
+                                                </optgroup>
+                                                <optgroup label="N">
+                                                    <option value="Niederlande">Niederlande</option>
+                                                    <option value="Norwegen">Norwegen</option>
+                                                </optgroup>
+                                                <optgroup label="P">
+                                                    <option value="Polen">Polen</option>
+                                                    <option value="Portugal">Portugal</option>
+                                                </optgroup>
+                                                <optgroup label="R">
+                                                    <option value="Rumänien">Rumänien</option>
+                                                </optgroup>
+                                                <optgroup label="S">
+                                                    <option value="Schweden">Schweden</option>
+                                                    <option value="Slowakei">Slowakei</option>
+                                                    <option value="Slowenien">Slowenien</option>
+                                                    <option value="Spanien">Spanien</option>
+                                                </optgroup>
+                                                <optgroup label="T">
+                                                    <option value="Tschechien">Tschechien</option>
+                                                </optgroup>
+                                                <optgroup label="U">
+                                                    <option value="Ungarn">Ungarn</option>
+                                                </optgroup>
+                                                <optgroup label="Z">
+                                                    <option value="Zypern">Zypern</option>
+                                                </optgroup>
+                                            </select>
                                         </p>
                                     </div>
                                 </div>
@@ -217,8 +282,72 @@
                                     <div class="field-body">
                                         <div class="field is-expanded">
                                             <p class="control">
-                                                <input type="text" name="dState" id="dState" placeholder="Land"
-                                                       class="input" autocomplete="off">
+                                                <select id="dState" name="dState" autocomplete="off">
+                                                    <option value="" disabled selected>Bitte ein Land auswählen</option>
+                                                    <option value="Österreich">Österreich</option>
+                                                    <option value="Deutschland">Deutschland</option>
+                                                    <option value="Schweiz">Schweiz</option>
+                                                    <optgroup label="B">
+                                                        <option value="Belgien">Belgien</option>
+                                                        <option value="Bulgarien">Bulgarien</option>
+                                                    </optgroup>
+                                                    <optgroup label="D">
+                                                        <option value="Dänemark">Dänemark</option>
+                                                    </optgroup>
+                                                    <optgroup label="E">
+                                                        <option value="Estland">Estland</option>
+                                                    </optgroup>
+                                                    <optgroup label="F">
+                                                        <option value="Finnland">Finnland</option>
+                                                        <option value="Frankreich">Frankreich</option>
+                                                    </optgroup>
+                                                    <optgroup label="G">
+                                                        <option value="Griechenland">Griechenland</option>
+                                                        <option value="Großbritannien">Großbritannien</option>
+                                                    </optgroup>
+                                                    <optgroup label="I">
+                                                        <option value="Irland">Irland</option>
+                                                        <option value="Italien">Italien</option>
+                                                    </optgroup>
+                                                    <optgroup label="K">
+                                                        <option value="Kroatien">Kroatien</option>
+                                                    </optgroup>
+                                                    <optgroup label="L">
+                                                        <option value="Lettland">Lettland</option>
+                                                        <option value="Liechtenstein">Liechtenstein</option>
+                                                        <option value="Litauen">Litauen</option>
+                                                        <option value="Luxemburg">Luxemburg</option>
+                                                    </optgroup>
+                                                    <optgroup label="M">
+                                                        <option value="Malta">Malta</option>
+                                                    </optgroup>
+                                                    <optgroup label="N">
+                                                        <option value="Niederlande">Niederlande</option>
+                                                        <option value="Norwegen">Norwegen</option>
+                                                    </optgroup>
+                                                    <optgroup label="P">
+                                                        <option value="Polen">Polen</option>
+                                                        <option value="Portugal">Portugal</option>
+                                                    </optgroup>
+                                                    <optgroup label="R">
+                                                        <option value="Rumänien">Rumänien</option>
+                                                    </optgroup>
+                                                    <optgroup label="S">
+                                                        <option value="Schweden">Schweden</option>
+                                                        <option value="Slowakei">Slowakei</option>
+                                                        <option value="Slowenien">Slowenien</option>
+                                                        <option value="Spanien">Spanien</option>
+                                                    </optgroup>
+                                                    <optgroup label="T">
+                                                        <option value="Tschechien">Tschechien</option>
+                                                    </optgroup>
+                                                    <optgroup label="U">
+                                                        <option value="Ungarn">Ungarn</option>
+                                                    </optgroup>
+                                                    <optgroup label="Z">
+                                                        <option value="Zypern">Zypern</option>
+                                                    </optgroup>
+                                                </select>
                                             </p>
                                         </div>
                                     </div>
@@ -303,6 +432,7 @@
                             dpost.required = true;
                             dcity.required = true;
                             dstate.required = true;
+                            dstate.value = document.getElementById("state").value
                         } else {
                             elem.style.display = 'none';
                             lbl.innerText = 'Rechnungs- und Lieferadresse';
