--- a/layouts/scores/single.html
+++ b/layouts/scores/single.html
@@ -5,7 +5,7 @@
         <div class="columns">
             <div class="column is-centered-tablet-portrait is-half">
                 <h1 class="title section-title">{{ .Title }}</h1>
-                <h5 class="subtitle is-5 is-muted">Marsch</h5>
+                <h5 class="subtitle is-5 is-muted">Polka</h5>
                 <div class="divider mb-60"></div>
                 <table>
                     <tr>
