added https to form

--- a/layouts/scores/single.html
+++ b/layouts/scores/single.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="card">
                     <div class="card-content">
-                        <form method="post" action="{{.Site.Params.core }}/api/order">
+                        <form method="post" action="https://{{.Site.Params.core }}/api/order">
                             <input type="hidden" name="scoreId" value="{{.Params.id}}" class="input">
                             <div class="field">
                                 <div class="field">
